# ADAS

./: .gitignore  CMStart.sh  Read.md
ros/ros1_ws/src/framework_status_msgs/: CMakeLists.txt  package.xml
ros/ros1_ws/src/framework_status_msgs/msg/: CPUStatus.msg  CPUStatusData.msg  CacheBagDetails.msg  DiskStatus.msg  DiskStatusData.msg  ExportDetails.msg  ExportDetailsData.msg  FleetDiskStatus.msg  FleetDiskStatusData.msg  FleetStatus.msg  GPUStatus.msg  GPUStatusData.msg  IPCStatus.msg  MDKDiRoadId.msg  ManagerStatus.msg  MemoryStatus.msg  MemoryStatusData.msg  MessageStatus.msg  ModuleControl.msg  ModuleStatus.msg  ModuleType.msg  NetAliveStatus.msg  NetCardStatus.msg  NetStatus.msg  NetStatusData.msg  NodeStatus.msg  NodesStatus.msg  OverallStatus.msg  ProcessStatus.msg  ProcessStatusData.msg  RoutingRequest.msg  RoutingRequestType.msg  RoutingResponse.msg  SingleDiskStatus.msg  SingleGPUStatus.msg  SingleMessageStatus.msg  SingleProcessStatus.msg  StatisticValue.msg  SystemStatus.msg  TimeStatus.msg  (+1 more)
ros/ros1_ws/src/planning_msgs/: CMakeLists.txt  package.xml
ros/ros1_ws/src/planning_msgs/msg/: Acceleration.msg  AccelerationPoint.msg  AccelerationRange.msg  AvdMsg.msg  Boundary.msg  Box2f.msg  Comfort.msg  Curve.msg  Decision.msg  Emergency.msg  EnvironmentData.msg  FailureReasonEnum.msg  FrenetState.msg  Gear.msg  GearCommand.msg  LateralDecision.msg  LocalLatMotionInfo.msg  LongitudinalDecision.msg  ManeuverGear.msg  MpcTrajectory.msg  MpcTrajectoryPoint.msg  MpcTrajectoryResult.msg  Obstacle.msg  ObstacleTypeEnum.msg  PathPlannerOutput.msg  PathPoint.msg  (+33 more)
(+251 files in other folders)
